kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scalable-web-service
  labels:
    app: scalable-web-service
spec:
  type: ClusterIP
  selector:
    app: scalable-web-service
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
